new color added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	.grid td{
 		width: 50px;
-		border: solid 1px grey;
+		border: solid 1px rgba(128, 128, 128, 0.9);
 		height: 50px;
 	}
 	.grid td.blocked{
