2nd color added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		height: 50px;
 	}
 	.grid td.blocked{
-		background-color: black;
+		background-color: rgba(0, 0, 0, 0.89);
 	}
 	.grid td.path{
 		background-color: blue;
